kubernetes/auth-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: purely
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: registry.xcelerate.systems/devops-project/auth-service:latest #############################
          ports:
            - containerPort: 9030
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: purely
  labels:
    app: auth-service
spec:
  type: ClusterIP
  ports:
    - port: 9030
      targetPort: 9030
  selector:
    app: auth-service
