kubernetes/product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: purely
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: registry.xcelerate.systems/devops-project/product-service:latest # Replace with your actual image name and tag
          ports:
            - containerPort: 9010
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: purely
  labels:
    app: product-service
spec:
  type: ClusterIP
  ports:
    - port: 9010
      targetPort: 9010
  selector:
    app: product-service
